--- a/eol.ipynb
+++ b/eol.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +25,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Empty DataFrame\n",
+       " Columns: [学校名称, 招生地区, 文理科, 年份, 录取批次, 录取人数, 录取平均分, 高校对比]\n",
+       " Index: []]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "pd.read_html(link)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,9 +71,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'totalRecord': {'num': '234143'},\n",
+       " 'school': [{'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '云南',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '671',\n",
+       "   'var_score': '671',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10001/10034/10149.htm?779822'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '西藏',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '629',\n",
+       "   'var_score': '629',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10025/10034/10149.htm?780715'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '陕西',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '656',\n",
+       "   'var_score': '656',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10029/10034/10149.htm?781454'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '河北',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '665',\n",
+       "   'var_score': '665',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10016/10034/10149.htm?782754'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '山西',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '610',\n",
+       "   'var_score': '610',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10010/10034/10149.htm?783959'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '黑龙江',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '628',\n",
+       "   'var_score': '628',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10031/10034/10149.htm?786149'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '河南',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '630',\n",
+       "   'var_score': '630',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10017/10034/10149.htm?791083'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '河北',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '理科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '682',\n",
+       "   'var_score': '682',\n",
+       "   'max': [],\n",
+       "   'min': [],\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '--',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10016/10035/10149.htm?808405'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '湖北',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '640',\n",
+       "   'var_score': '640',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10021/10034/10149.htm?792310'},\n",
+       "  {'schoolid': '31',\n",
+       "   'schoolname': '北京大学',\n",
+       "   'localprovince': '湖南',\n",
+       "   'province': '北京',\n",
+       "   'studenttype': '文科',\n",
+       "   'year': '2016',\n",
+       "   'batch': '本科提前批',\n",
+       "   'var': '643',\n",
+       "   'var_score': '643',\n",
+       "   'max': '--',\n",
+       "   'min': '--',\n",
+       "   'num': '0',\n",
+       "   'fencha': '0',\n",
+       "   'provincescore': '0',\n",
+       "   'url': 'http://gkcx.eol.cn/schoolhtm/schoolAreaPoint/31/10022/10034/10149.htm?793595'}]}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# pip install requests, or conda install requests\n",
     "import requests\n",
@@ -81,9 +254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "北京大学, 云南, 北京, 文科, 2016, 本科提前批, 671, 671\n",
+      "北京大学, 西藏, 北京, 文科, 2016, 本科提前批, 629, 629\n",
+      "北京大学, 陕西, 北京, 文科, 2016, 本科提前批, 656, 656\n",
+      "北京大学, 河北, 北京, 文科, 2016, 本科提前批, 665, 665\n",
+      "北京大学, 山西, 北京, 文科, 2016, 本科提前批, 610, 610\n",
+      "北京大学, 黑龙江, 北京, 文科, 2016, 本科提前批, 628, 628\n",
+      "北京大学, 河南, 北京, 文科, 2016, 本科提前批, 630, 630\n",
+      "北京大学, 河北, 北京, 理科, 2016, 本科提前批, 682, 682\n",
+      "北京大学, 湖北, 北京, 文科, 2016, 本科提前批, 640, 640\n",
+      "北京大学, 湖南, 北京, 文科, 2016, 本科提前批, 643, 643\n"
+     ]
+    }
+   ],
    "source": [
     "row = \"{schoolname}, {localprovince}, {province}, {studenttype}, {year}, {batch}, {var}, {var_score}\"\n",
     "\n",
